--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.0.5
   dio: ^5.3.2
   mockito: ^5.4.2
+  path_provider:
+  permission_handler:
 dev_dependencies:
   flutter_test:
     sdk: flutter
