--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,6 @@ dependencies:
   provider: ^6.0.5
   dio: ^5.3.2
   mockito: ^5.4.2
-  path_provider:
-  permission_handler:
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -63,8 +61,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/ui_layer/display_page/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
