--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ app.*.map.json
 
 # project files
 /lib/data_layer/search_image/search_image_api.dart
+/lib/data_layer/curated_photos/curated_photos_data.dart
