--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,16 @@ dependencies:
   provider: ^6.0.5
   dio: ^5.3.2
   mockito: ^5.4.2
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/app_icon/app_icon.jpeg"
+  min_sdk_android: 21
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
