--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
-  dio: ^5.3.2
   mockito: ^5.4.2
+  permission_handler:
+  flutter_file_downloader: ^1.1.2
+  shared_preferences: ^2.2.1
+  http: ^1.1.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
