--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,8 @@ dependencies:
   http: ^1.1.0
   permission_handler: ^11.0.0
   build_runner: ^2.4.6
-  flutter_image: ^4.1.8
   internet_connection_checker: ^1.0.0+1
+  cached_network_image: ^3.2.3
 
 flutter_launcher_icons:
   android: "launcher_icon"
