--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,15 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^6.0.5
   mockito: ^5.4.2
-  flutter_file_downloader: ^1.1.2
+  flutter_file_downloader: ^1.1.3
   shared_preferences: ^2.2.1
   http: ^1.1.0
   permission_handler: ^11.0.0
   build_runner: ^2.4.6
   internet_connection_checker: ^1.0.0+1
   cached_network_image: ^3.2.3
+  flutter_riverpod: ^2.4.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
